# mentalika-rs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  index.html  index.scss
assets/mockups/: app-assignment-details.html  app-template.html
docs/: app-template.html
src/: app.rs  assignment.rs  components.rs  main.rs  model.rs  models.rs
src/components/: assignment.rs  free.rs  homework.rs  user.rs
src/model/: assignment.rs  task.rs  ui.rs
