[package]
name = "mentalika-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
rand = {version="0.8.5", features=["serde1"]}
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8"
serde = "1"
serde_derive = "1"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
	"Storage",
    "Window",
]
