[package]
name = "mentalika-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
yewdux = "0.9"
rand = {version="0.8.5", features=["serde1"]}
getrandom = { version = "0.2", features = ["js"] }
serde = "1"
serde_derive = "1"
chrono = {version="0.4", features = ["serde"]}

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
	"Storage",
    "Window",
]

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
	"serde",
]